--- a/Natorus/index.html
+++ b/Natorus/index.html
@@ -245,6 +245,76 @@
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+
+      <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser is not supported!
+          </video>
+        </div>
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            We make people genuinely happy
+          </h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="../Natorus/img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">
+                Mary Smith
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week with my family
+              </h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
+                quo molestiae perspiciatis nulla. Necessitatibus, quod facere?
+                Perspiciatis, dolores, tenetur cum accusamus nihil quos quod
+                quisquam esse eius eveniet molestiae dolor. esse eius eveniet
+                molestiae dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="../Natorus/img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">
+                Jack Wilson
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! My life is completely different now!
+              </h3>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam
+                quo molestiae perspiciatis nulla. Necessitatibus, quod facere?
+                Perspiciatis, dolores, tenetur cum accusamus nihil quos quod
+                quisquam esse eius eveniet molestiae dolor. esse eius eveniet
+                molestiae dolor.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+      </section>
     </main>
   </body>
 </html>
